--- a/index.html
+++ b/index.html
@@ -11,18 +11,58 @@
 </head>
 
 <body>
+  <!-- Header -->
   <section id="mainSection">
-
     <header>
-      <!-- Header mobile only -->
+      <section class="desktopView">
+        <p class="warning">Due to adverse weather in some locations delivery may take longer than usual. Sorry for the
+          incovenience and thank you for your patience.</p>
+        <nav class="navbar">
+          <div id="navleft">
+            <a href="https://www.pizzahut.co.uk" target="_blank">
+              <img src="images/img_2.PNG" id="logoImage" />
+            </a>
+          </div>
+          <ul id="navmid">
+            <li><a href="#" class="navlinks">Deals</a></li>
+            <li><a href="#" class="navlinks">Locations</a></li>
+            <li><a href="#" class="navlinks">Help</a></li>
+            <li><a href="#" class="navlinks">Contact</a></li>
+          </ul>
+          <div id="navright">
+            <img src="./images/img_3.PNG">
+          </div>
+        </nav>
+      </section>
       <section class="mobileview">
         <img src="./images/img_2.PNG" alt="pizzalogo">
       </section>
     </header>
-
+    <!-- body desktop only -->
     <main class="banner">
-      <!-- Body Mobile only-->
+      <section class="desktopView">
+        <img src="./images/img_1.jpg" id="banner-promo">
 
+        <div class="banner-text">
+          <h1>Contact-free</h1>
+          <p>on all deliveries across the UK.</p>
+        </div>
+
+        <section class="order">
+          <h1>Delivery</h1>
+          <h2>Contact-Free</h2>
+          <p>All our deliveries are contact-free to keep everyone healthy. All orders will need to be paid online by
+            debit/credit card.</p>
+          <a href="https://www.pizzahut.co.uk/contactlessdelivery" target="_blank">Learn More</a>
+          <form>
+            <input type="text" placeholder="Postcode" />
+            <button>Find My Hut</button>
+          </form>
+        </section>
+      </section>
+
+
+      <!-- Body Mobile only-->
       <section class="mobileview">
         <ul>
           <li><a href="#" class="navlinks">Deals</a></li>
@@ -35,9 +75,9 @@
           <p>on all deliveries across the UK.</p>
         </div>
       </section>
-
     </main>
   </section>
+
   <!-- Footer Mobile and Desktop -->
   <footer>
     <div id="footerleft">CopyRight &copy; PurpleBeard - Student Name</div>
